--- a/j-novel/login.html
+++ b/j-novel/login.html
@@ -9,7 +9,7 @@
         <br/>
         <button onclick="onAuthorizeClick()">Authorize</button>
     </body>
-    <script src="/j-novel/js/api.js" type="text/javascript" charset="utf-8"></script>
-    <script src="/j-novel/js/auth.js" type="text/javascript" charset="utf-8"></script>
-    <script src="/j-novel/js/login.js" type="text/javascript" charset="utf-8"></script>
+    <script src="./js/api.js" type="text/javascript" charset="utf-8"></script>
+    <script src="./js/auth.js" type="text/javascript" charset="utf-8"></script>
+    <script src="./js/login.js" type="text/javascript" charset="utf-8"></script>
 </html>
