--- a/j-novel/parts.html
+++ b/j-novel/parts.html
@@ -3,10 +3,10 @@
     <body>
         Parts:
         <ul id="part-list">
-
+            <li>Loading parts ...</li>
         </ul>
     </body>
-    <script src="/j-novel/js/api.js" type="text/javascript" charset="utf-8"></script>
-    <script src="/j-novel/js/auth.js" type="text/javascript" charset="utf-8"></script>
-    <script src="/j-novel/js/parts.js" type="text/javascript" charset="utf-8"></script>
+    <script src="./js/api.js" type="text/javascript" charset="utf-8"></script>
+    <script src="./js/auth.js" type="text/javascript" charset="utf-8"></script>
+    <script src="./js/parts.js" type="text/javascript" charset="utf-8"></script>
 </html>
