--- a/j-novel/read.html
+++ b/j-novel/read.html
@@ -2,7 +2,7 @@
 <html>
     <body>
     </body>
-    <script src="/j-novel/js/api.js" type="text/javascript" charset="utf-8"></script>
-    <script src="/j-novel/js/auth.js" type="text/javascript" charset="utf-8"></script>
-    <script src="/j-novel/js/read.js" type="text/javascript" charset="utf-8"></script>
+    <script src="./js/api.js" type="text/javascript" charset="utf-8"></script>
+    <script src="./js/auth.js" type="text/javascript" charset="utf-8"></script>
+    <script src="./js/read.js" type="text/javascript" charset="utf-8"></script>
 </html>
