--- a/j-novel/login.html
+++ b/j-novel/login.html
@@ -1,15 +1,43 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <script src="./js/debug.js" type="text/javascript" charset="utf-8"></script>
+        <script src="./js/api.js" type="text/javascript" charset="utf-8"></script>
+        <script src="./js/auth.js" type="text/javascript" charset="utf-8"></script>
+        <style>
+            body {
+                font-size: 32px;
+            }
+            #login-box {
+                margin: 32px;
+                border: 1px solid;
+                padding: 8px;
+                border-radius: 8px;
+                text-align: center;
+            }
+            button {
+                font-size: 32px;
+                background: transparent;
+                border: 1px solid;
+                border-radius: 8px;
+                margin-top: 64px;
+                padding: 32px;
+            }
+        </style>
+        <title>J-Novel Kindle reader</title>
+    </head>
     <body>
-        Login
-        <br/>
-        <label>
-            Put this code in app: <span id="otp">-</span>
-        </label>
-        <br/>
-        <button onclick="onAuthorizeClick()">Authorize</button>
+        <div id="login-box">
+            Login
+            <br/>
+            <label>
+                Put this code in app: <div id="otp">-</div>
+            </label>
+            <br/>
+            <a href="https://j-novel.club/user/otp" target="_blank">https://j-novel.club/user/otp</a>
+            <br/>
+            <button onclick="onAuthorizeClick()">Authorize</button>
+        </div>
     </body>
-    <script src="./js/api.js" type="text/javascript" charset="utf-8"></script>
-    <script src="./js/auth.js" type="text/javascript" charset="utf-8"></script>
     <script src="./js/login.js" type="text/javascript" charset="utf-8"></script>
 </html>
