--- a/j-novel/parts.html
+++ b/j-novel/parts.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <script src="./js/debug.js" type="text/javascript" charset="utf-8"></script>
+        <script src="./js/auth.js" type="text/javascript" charset="utf-8"></script>
+        <script src="./js/api.js" type="text/javascript" charset="utf-8"></script>
+    </head>
     <body>
         Parts:
         <ul id="part-list">
             <li>Loading parts ...</li>
         </ul>
     </body>
-    <script src="./js/api.js" type="text/javascript" charset="utf-8"></script>
-    <script src="./js/auth.js" type="text/javascript" charset="utf-8"></script>
     <script src="./js/parts.js" type="text/javascript" charset="utf-8"></script>
 </html>
