--- a/j-novel/read.html
+++ b/j-novel/read.html
@@ -1,8 +1,17 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <script src="./js/debug.js" type="text/javascript" charset="utf-8"></script>
+        <script src="./js/auth.js" type="text/javascript" charset="utf-8"></script>
+        <script src="./js/api.js" type="text/javascript" charset="utf-8"></script>
+        <style>
+            #read-space {
+                min-height: 200px;
+            }
+        </style>
+    </head>
     <body>
+        <div id="read-space" onclick="onReadSpaceClick()"></div>
     </body>
-    <script src="./js/api.js" type="text/javascript" charset="utf-8"></script>
-    <script src="./js/auth.js" type="text/javascript" charset="utf-8"></script>
     <script src="./js/read.js" type="text/javascript" charset="utf-8"></script>
 </html>
