Hidden debugging info

--- a/j-novel/login.html
+++ b/j-novel/login.html
@@ -19,6 +19,8 @@
                 font-size: 32px;
                 background: transparent;
                 border: 1px solid;
+            }
+            #authorize {
                 border-radius: 8px;
                 margin-top: 64px;
                 padding: 32px;
@@ -36,7 +38,7 @@
             <br/>
             <a href="https://j-novel.club/user/otp" target="_blank">https://j-novel.club/user/otp</a>
             <br/>
-            <button onclick="onAuthorizeClick()">Authorize</button>
+            <button id="authorize" onclick="onAuthorizeClick()">Authorize</button>
         </div>
     </body>
     <script src="./js/login.js" type="text/javascript" charset="utf-8"></script>
