--- a/j-novel/login.html
+++ b/j-novel/login.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script src="./js/debug.js" type="text/javascript" charset="utf-8"></script>
+        <script src="./js/common.js" type="text/javascript" charset="utf-8"></script>
         <script src="./js/api.js" type="text/javascript" charset="utf-8"></script>
         <script src="./js/auth.js" type="text/javascript" charset="utf-8"></script>
+        <link rel="stylesheet" href="./styles/global.css">
         <style>
             body {
                 font-size: 32px;
