--- a/j-novel/read.html
+++ b/j-novel/read.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script src="./js/debug.js" type="text/javascript" charset="utf-8"></script>
+        <script src="./js/common.js" type="text/javascript" charset="utf-8"></script>
         <script src="./js/auth.js" type="text/javascript" charset="utf-8"></script>
         <script src="./js/api.js" type="text/javascript" charset="utf-8"></script>
-        <style>
-            #read-space {
-                min-height: 200px;
-            }
-        </style>
+        <link rel="stylesheet" href="./styles/global.css">
+        <link rel="stylesheet" href="./styles/reader.css">
     </head>
     <body>
         <div id="read-space" onclick="onReadSpaceClick()"></div>
